Bug 270215 - Memory leak in wallet_GetLine r=cbiesinger@gmx.at, sr=darin@meer.net